--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "mongoose": "^8.4.0"
-    
+    "mongoose": "^8.4.0",
+    "mongoose-type-email": "^1.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
